# ASC_to_CSV

./: .gitattributes  .gitignore  PlainTxT.txt  README.md  __init__.py  asc_file_merger.py  asc_parser.py  build.bat  config.json  config.py  convert_icon.py  csv_merger.py  enhanced_conversion_service.py  enhanced_csv_writer.py  enhanced_data_processor.py  generate_architecture_diagram.py  group_extractor.py  main.py  main_app.py  main_enhanced.py  multi_asc_converter.py  pyproject.toml  requirements-dev.txt  requirements.txt  说明文档.docx
.github/workflows/: ci-cd.yml
archived/: README.md  conversion_service.py  csv_writer.py  data_processor.py
core/: __init__.py  asc_parser.py  chart_manager.py  conversion_coordinator.py  csv_loader.py  csv_writer.py  data_processor.py  dbc_loader.py  group_extractor.py  multi_file_processor.py  single_file_processor.py  utils.py
docs/: CSV_LOADER_OPTIMIZATION.md  SOFTWARE_ARCHITECTURE.md  USER_GUIDE.md  USER_MANUAL.md  VSCODE_CICD_GUIDE.md  功能列表.md  快速使用手册.txt
services/: __init__.py  asc_merger.py  conversion_service.py  csv_merger.py  multi_converter.py
tests/: __init__.py  test_conversion_service.py  test_csv_loader.py  test_enhanced_csv_writer.py  test_export_tab.py  test_group_extractor.py  test_utils.py
tools/: __init__.py  arch_diagram.py  icon_converter.py
ui/: __init__.py  base.py  compare_tab.py  convert_tab.py  export_tab.py  multi_select_combo.py  visualize_tab.py
