[project]
name = "asc-to-csv"
version = "1.1.0"
description = "ASC to CSV converter with visualization"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["asc", "csv", "can", "dbc", "converter", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "cantools>=41.0.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
build = [
    "pyinstaller>=6.0.0",
    "Pillow>=10.0.0",
]
all = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pyinstaller>=6.0.0",
    "Pillow>=10.0.0",
]

[project.scripts]
asc-to-csv = "main_app:main_app"

[project.urls]
Homepage = "https://github.com/your-repo/asc-to-csv"
Documentation = "https://github.com/your-repo/asc-to-csv/docs"
Repository = "https://github.com/your-repo/asc-to-csv"
Issues = "https://github.com/your-repo/asc-to-csv/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["core", "services", "ui"]
omit = ["tests/*", "tools/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise AssertionError",
]

[tool.flake8]
max-line-length = 120
exclude = ["venv", "build", "dist", "__pycache__", ".git", "*.spec"]
ignore = ["E203", "W503", "E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true